--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "ejs": "^2.6.1",
     "express": "^4.16.3"
   },
   "devDependencies": {
